# hypermodern-python

./: .flake8  .gitignore  README.md  mypy.ini  noxfile.py  pyproject.toml
docs/: conf.py  reference.rst
docs/_build/: .buildinfo  genindex.html  index.html  license.html  objects.inv  reference.html  search.html  searchindex.js
docs/_build/.doctrees/: environment.pickle  index.doctree  license.doctree  reference.doctree
docs/_build/_sources/: index.rst.txt
src/hypermodern_python/: console.py  wikipedia.py
tests/: conftest.py  test_console.py  test_wikipedia.py
